--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,22 +1,28 @@
 <h3>Create an Account</h3>
 
-<form class="ui form" [formGroup]="authForm">
-    <div class="field">
-        <label >Username</label>
-        <input formControlName="username" />
-    </div>
-    {{authForm.get('username').errors | json}}
-  <div class="field">
-      <label >Password</label>
-    <input formControlName="password" />
-  </div>
-  {{authForm.get('password').errors | json}}
-  <div class="field">
-      <label>Password Confirmation</label>
-    <input formControlName="passwordConfirmation" />
-  </div>
-  {{authForm.get('passwordConfirmation').errors | json}}
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
+   
+    <app-input inputType="text" label="Username" [control]="authForm.get('username')"></app-input>
+    <app-input inputType="password" label="Password" [control]="authForm.get('password')"></app-input>
+    <app-input inputType="password" label="Password Confirmation" [control]="authForm.get('passwordConfirmation')"></app-input>
+<div 
+*ngIf="authForm.get('password').touched && authForm
+.get('passwordConfirmation').touched &&
+authForm.errors" 
+class="ui red basic label"
+>
+  <p *ngIf="authForm.errors.passwordDontMatch">
+     Password and Password Confirmation must match
+  </p>
+</div>
+<div>
+  <button class="ui submit button primary"> 
+    Submit 
+  </button>
+  {{ authForm.errors | json }}
 
-<button class="ui submit button primary"> Submit </button>
-{{ authForm.errors | json }}
+</div>
+
 </form>
+ 
+<!-- {{authForm.get('username').errors | json}} -->
