--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,1 +1,15 @@
-<p>signin works!</p>
+<h3>Sign In</h3>
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
+<app-input inputType="text" label="username" [control]="authForm.get('username')"></app-input>
+<app-input inputType="password" label="password" [control]="authForm.get('password')"></app-input>
+
+<div *ngIf="authForm.errors" class="ui red basic label">
+<p *ngIf="authForm.errors.credentials">
+Invalid username or password
+</p>
+</div>
+<div>
+    <button class="ui submit button primary"> Signin</button>
+</div>
+
+</form>
