--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<div class="ui container">
-<div class="ui secondary pointing menu">
-<a routerLink="/" class="item">Angular Email</a>
+<div class="ui  container">
+<div class="ui inverted menu">
+<a routerLink="/" class=" item">Angular Email</a>
  <div class="right menu">
      <ng-container *ngIf="signedin$ | async">
-        <a class="ui item" routerLink="/inbox" routerLinkActive="active">Inbox</a>
-        <a class="ui item" routerLink="/signout" routerLinkActive="active">Sign Out</a>
+        <a class="ui orange item" routerLink="/inbox" routerLinkActive="active">Inbox</a>
+        <a class="ui orange item" routerLink="/signout" routerLinkActive="active">Sign Out</a>
      </ng-container>
      <ng-container *ngIf="!(signedin$ | async)">
-        <a class="ui item" routerLink="/" [routerLinkActiveOptions]="{ exact: true}" routerLinkActive="active">Sign In</a>
-        <a class="ui item" routerLink="/signup" routerLinkActive="active">Sign Up</a>
+        <a class="ui orange item" routerLink="/" [routerLinkActiveOptions]="{ exact: true}" routerLinkActive="active">Sign In</a>
+        <a class="ui orange item" routerLink="/signup" routerLinkActive="active">Sign Up</a>
      </ng-container>
      
  </div>
