--- a/src/app/inbox/email-create/email-create.component.html
+++ b/src/app/inbox/email-create/email-create.component.html
@@ -1,1 +1,7 @@
-<p>email-create works!</p>
+<button (click)="showModal = true" class="ui inverted orange button fluid">
+    Compose
+</button>
+<app-modal (dismiss)="showModal = false" *ngIf="showModal">
+    <div modalTitle>Compose</div>
+    <app-email-form (emailSubmit)="onSubmit($event)" [email]="email"></app-email-form>
+</app-modal>
