--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,4 +1,4 @@
-<div class=" header" *ngIf="email">
+<div class="header" >
     <div>
         
           <h3 style="color: aliceblue;">{{email.subject}}</h3>  
@@ -8,6 +8,12 @@
           <div style="color: aliceblue;">
               To: <i style="color: aliceblue;">{{email.to}}</i>
           </div>
+         
         
     </div>
+    <div>
+        <app-email-reply [email]="email"></app-email-reply>
+    </div>
 </div>
+<div class="ui divider"></div>
+<div style="color: aliceblue;" [innerHTML]="email.html"></div>
